--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "mint-ui": "^2.2.13",
+    "swiper": "^6.5.8",
     "vant": "^2.12.13",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
